--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="reset_button_text">Reset</string>
     <string name="save_button_text">Save</string>
     <string name="cancel_button_text">Retour</string>
+    <string name="delete_button_text">Retour</string>
     <string name="ok_button_text">Ok</string>
 
     <string name="titre">Titre</string>
