--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="delete_button_text">Retour</string>
     <string name="ok_button_text">Ok</string>
 
-    <string name="titre">Titre</string>
+    <string name="add_title">Titre d'ajout</string>
+    <string name="delete_title">Titre de suppr</string>
 </resources>
