Add DialogFragment to set element in BDD

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="ok_button_text">Ok</string>
 
     <string name="add_title">Titre d\'ajout</string>
+    <string name="set_title">Titre de modif</string>
     <string name="delete_title">Titre de suppr</string>
 </resources>
