--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,13 @@
 
     <string name="bpm">0</string>
     <string name="action_settings">Settings</string>
-    <string name="cancel_button_text">Retour</string>
-    <string name="delete_button_text">Supprimer</string>
-    <string name="delete_text">Êtes-vous certain de vouloir le supprimer ?</string>
+    <string name="cancel_button_text">Cancel</string>
+    <string name="delete_button_text">Delete</string>
+    <string name="delete_text">Delete this element ?</string>
     <string name="ok_button_text">Ok</string>
 
-    <string name="add_element">Nouveau élément</string>
-    <string name="set_element">Titre de modif</string>
+    <string name="add_element">New element</string>
+    <string name="set_element">Modif title</string>
+    <string name="title_add_element">Add element</string>
+    <string name="title_set_element">Rename element</string>
 </resources>
