--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -3,9 +3,11 @@
 
     <string name="bpm">0</string>
     <string name="action_settings">Paramètres</string>
+    <string name="action_delete_all">Tout supprimer</string>
     <string name="cancel_button_text">Annuler</string>
     <string name="delete_button_text">Supprimer</string>
     <string name="delete_text">Supprimer cet élément ?</string>
+    <string name="delete_all_text">Supprimer tous les éléments ?</string>
     <string name="ok_button_text">Ok</string>
 
     <string name="add_element">Nouvel élément</string>
