--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,11 @@
 
     <string name="bpm">0</string>
     <string name="action_settings">Settings</string>
+    <string name="action_delete_all">Delete all</string>
     <string name="cancel_button_text">Cancel</string>
     <string name="delete_button_text">Delete</string>
     <string name="delete_text">Delete this element ?</string>
+    <string name="delete_all_text">Delete all elements ?</string>
     <string name="ok_button_text">Ok</string>
 
     <string name="add_element">New element</string>
