--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -11,7 +11,6 @@
     <string name="ok_button_text">Ok</string>
 
     <string name="add_element">Nouvel élément</string>
-    <string name="set_element">Titre de modif</string>
-    <string name="title_add_element">Ajout d\'un element</string>
-    <string name="title_set_element">Renommage de l\'element</string>
+    <string name="title_add_element">Ajouter un element</string>
+    <string name="title_set_element">Renommer l\'element</string>
 </resources>
