--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="bpm">0</string>
     <string name="action_settings">Settings</string>
+    <string name="title_share">Share via</string>
     <string name="action_share_all">Share all</string>
     <string name="action_delete_all">Delete all</string>
     <string name="cancel_button_text">Cancel</string>
