--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -8,6 +8,8 @@
     <string name="action_delete_all">Tout supprimer</string>
     <string name="cancel_button_text">Annuler</string>
     <string name="delete_button_text">Supprimer</string>
+    <string name="reset_button_text">Reset</string>
+    <string name="save_button_text">Sauvegarder</string>
     <string name="delete_text">Supprimer cet élément ?</string>
     <string name="delete_all_text">Supprimer tous les éléments ?</string>
     <string name="ok_button_text">Ok</string>
