--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Paramètres</string>
     <string name="title_share">Partager via</string>
     <string name="action_share_all">Partager</string>
+    <string name="action_sort">Trier</string>
     <string name="action_delete_all">Tout supprimer</string>
     <string name="cancel_button_text">Annuler</string>
     <string name="delete_button_text">Supprimer</string>
@@ -16,4 +17,10 @@
     <string name="add_artist">Artiste</string>
     <string name="title_add_element">Ajouter un element</string>
     <string name="title_set_element">Renommer l\'element</string>
+
+    <string name="sort_list_text">Trier par...</string>
+    <string name="sort_by_creation">Date de création</string>
+    <string name="sort_by_title">Titre</string>
+    <string name="sort_by_artist">Artiste</string>
+    <string name="sort_by_bpm">BPM</string>
 </resources>
