--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,15 +5,22 @@
     <string name="action_settings">Settings</string>
     <string name="title_share">Share via</string>
     <string name="action_share_all">Share all</string>
+    <string name="action_sort">Sort</string>
     <string name="action_delete_all">Delete all</string>
     <string name="cancel_button_text">Cancel</string>
     <string name="delete_button_text">Delete</string>
     <string name="delete_text">Delete this element ?</string>
     <string name="delete_all_text">Delete all elements ?</string>
-    <string name="ok_button_text">Ok</string>
+    <string name="ok_button_text">OK</string>
 
     <string name="add_title">Title</string>
     <string name="add_artist">Artist</string>
     <string name="title_add_element">Add element</string>
     <string name="title_set_element">Rename element</string>
+
+    <string name="sort_list_text">Sort by...</string>
+    <string name="sort_by_creation">Creation date</string>
+    <string name="sort_by_title">Title</string>
+    <string name="sort_by_artist">Artist</string>
+    <string name="sort_by_bpm">BPM</string>
 </resources>
